--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!-- Menu items -->
         <ul class="navigation">
           <li><a href="index.html">Home</a></li>
-          <li><a href="chamber/directory.html">Chamber</a></li>
+          <li><a href="chamber/index.html">Chamber</a></li>
           <li><a href="#">Github Profile</a></li>
           <li>
             <a href="https://www.linkedin.com/in/kenton-beech/" target="_blank"
