Updated responsiveness for mobile.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Kenton Beech">
-    <meta name="description" content="W01 Home Page">
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/styles.css">
-    <script src="scripts/main.js" defer></script>
 
-    <title>W01 Home Page</title>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="author" content="Kenton Beech">
+	<meta name="description" content="W01 Home Page">
+	<link rel="stylesheet" href="styles/normalize.css">
+	<link rel="stylesheet" href="styles/styles.css">
+	<script src="scripts/main.js" defer></script>
+
+	<title>W01 Home Page</title>
 
 	<!-- META TAGS FOR FACEBOOK SOCIAL MEDIA -->
 	<meta property="og:title" content="W01 Home Page" />
@@ -30,21 +31,19 @@
 			<h1>Kenton R. Beech</h1>
 		</div>
 
-      <button aria-label="links" class="hamburger" id="Hamburger"></button>
-      <nav id="PrimaryNav">
-        <!-- Menu items -->
-        <ul class="navigation">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="chamber/directory.html">Chamber</a></li>
-          <li><a href="#">Github Profile</a></li>
-          <li>
-            <a href="https://www.linkedin.com/in/kenton-beech/" target="_blank"
-              >LinkedIn</a
-            >
-          </li>
-        </ul>
-      </nav>
-    </header>
+		<button aria-label="links" class="hamburger" id="Hamburger"></button>
+		<nav id="PrimaryNav">
+			<!-- Menu items -->
+			<ul class="navigation">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="chamber/index.html">Chamber</a></li>
+				<li><a href="#">Github Profile</a></li>
+				<li>
+					<a href="https://www.linkedin.com/in/kenton-beech/" target="_blank">LinkedIn</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
 
 	<main>
 
@@ -79,22 +78,23 @@
 
 					<div class="courses">
 
-            </div>
-          </div>
-        </section>
-      </div>
-    </main>
+					</div>
+				</div>
+			</section>
+		</div>
+	</main>
 
-    <dialog class="modal" id="course-details">
-      <div class="dialog-content">
-        <!-- Dialog content goes here -->
-      </div>
-    </dialog>
+	<dialog class="modal" id="course-details">
+		<div class="dialog-content">
+			<!-- Dialog content goes here -->
+		</div>
+	</dialog>
 
-    <footer>
-      <p><span id="currentyear"></span> | Kenton Beech | South Africa</p>
+	<footer>
+		<p><span id="currentyear"></span> | Kenton Beech | South Africa</p>
 
-      <p id="lastModified"></p>
-    </footer>
-  </body>
+		<p id="lastModified"></p>
+	</footer>
+</body>
+
 </html>
