Edited size of hero image.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -61,7 +61,7 @@
 
         <section class="hero__image">
             <div class="hero__image__container">
-                <img src="images/network.jpg" alt="">
+                <img src="images/network1.jpg" alt="">
             </div>
         </section>
 
