Edited all pages in Chamber folder.

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -45,8 +45,8 @@
 					<ul class="nav__menu close" id="navMenu">
 						<li><a href="index.html" class="menu__items active">Home</a></li>
 						<li><a href="directory.html" class="menu__items">Directory</a></li>
-						<li><a href="#" class="menu__items">Join</a></li>
-						<li><a href="#" class="menu__items">Discover</a></li>
+						<li><a href="join.html" class="menu__items">Join</a></li>
+						<li><a href="discover.html" class="menu__items">Discover</a></li>
 					</ul>
 					<div class="color__toggle">
 						<img src="images/dark-mode (2).png" alt="">
@@ -126,3 +126,4 @@
 		</div>
 	</footer>
 </body>
+</html>
