--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -46,7 +46,7 @@
             <li><a href="index.html" class="menu__items">Home</a></li>
             <li><a href="directory.html" class="menu__items">Directory</a></li>
             <li><a href="join.html" class="menu__items">Join</a></li>
-            <li><a href="#" class="menu__items">Discover</a></li>
+            <li><a href="discover.html" class="menu__items">Discover</a></li>
           </ul>
           <div class="color__toggle">
             <img src="images/dark-mode (2).png" alt="">
