Completed Tennis Club site. Pushing all related files.

--- a/tennis_club/siteplan.html
+++ b/tennis_club/siteplan.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Kenton Beech">
     <meta name="description" content="Tennis Club Siteplan">
     <!--<link rel="stylesheet" href="styles/normalize.css">-->
-    <link href="styles/styles.css" rel="stylesheet" />
+    <link href="styles/siteplan.css" rel="stylesheet" />
 
     <title>Siteplan</title>
 
