Added link to button.

--- a/tennis_club/index.html
+++ b/tennis_club/index.html
@@ -61,7 +61,7 @@
                     community
                     for players of all abilities. Founded to champion the sport of tennis, our club provides excellent
                     facilities, expert coaching, and a welcoming atmosphere for both casual and competitive players.</p>
-                <button class="membership-btn">Get Membership</button>
+                <a href="contact.html"><button class="membership-btn">Get Membership</button></a>
             </div>
 
             <div class="welcome-image">
